Expressions - immutable parameter binding, pruning unbound conditions #602
* to keep manually-produced expressions similar to the parsed ones, we need
  to set the parent for each child node... And to preserve immutability,
  we need to deep-copy added children